[gd_scene format=3 uid="uid://c8b5ks8w5xxvh"]

[ext_resource type="Script" uid="uid://hvci7u4b4iar" path="res://Quinn/transition_screen.gd" id="1_77mk1"]
[ext_resource type="Texture2D" uid="uid://dn3iq6djy27ym" path="res://Quinn/art/Ice DNA.png" id="2_4hyr7"]
[ext_resource type="Texture2D" uid="uid://dvww2c5vhejei" path="res://assets/sprites/baby/baby_body_small.png" id="3_voa77"]

[sub_resource type="Animation" id="Animation_s4ft7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PowerupImage:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PowerUpName:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ContinueButton:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_77mk1"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_pdxje"]
resource_name = "fade_in_UI"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PowerupImage:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PowerUpName:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ContinueButton:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_voa77"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PowerupImage:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PowerUpName:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ContinueButton:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4hyr7"]
_data = {
&"RESET": SubResource("Animation_s4ft7"),
&"fade_in": SubResource("Animation_77mk1"),
&"fade_in_UI": SubResource("Animation_pdxje"),
&"fade_out": SubResource("Animation_voa77")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_voa77"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_4hyr7")
}],
"loop": true,
"name": &"ice",
"speed": 5.0
}]

[node name="TransitionScreen" type="CanvasLayer" unique_id=1977795938]
process_mode = 3
script = ExtResource("1_77mk1")

[node name="ColorRect" type="ColorRect" parent="." unique_id=148431534]
self_modulate = Color(1, 1, 1, 0)
offset_right = 1154.0
offset_bottom = 646.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1000439641]
libraries/ = SubResource("AnimationLibrary_4hyr7")

[node name="PowerupImage" type="AnimatedSprite2D" parent="." unique_id=73487665]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(611, 304)
sprite_frames = SubResource("SpriteFrames_voa77")
animation = &"ice"

[node name="PowerUpName" type="Label" parent="." unique_id=230208129]
self_modulate = Color(1, 1, 1, 0)
offset_right = 40.0
offset_bottom = 23.0

[node name="ContinueButton" type="TextureButton" parent="." unique_id=1727975835]
self_modulate = Color(1, 1, 1, 0)
offset_left = 548.0
offset_top = 322.0
offset_right = 588.0
offset_bottom = 362.0
texture_normal = ExtResource("3_voa77")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed"]
